updated resolveDefaultObjectFactoryPath